--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,11 @@
 </section> <!--bg-section-->
 
 
+
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 <script src="_JS/class-note-controller.js"></script>
 <script src="_JS/note-controller.js"></script>
 </body>
